My Personal Website - JS History

--- a/week5/index.html
+++ b/week5/index.html
@@ -34,15 +34,27 @@
 	  Asia Pacific College &#127970, 2nd year BSIT student &#128187.
 	  I have different hobbies from playing instruments like piano &#127929 and guitar &#127928, 
 	  sports&#127936&#127955, reading novels &#128218, and competitive video games &#127918 depending on my mood&#128528 on 
-	  which I feel I want to do. Currently, I am focusing in further developing &#128200 this website. </p>
-	  <p>If you wish to give suggestion(s), 
-	you can contact &#128241 me through my given social media accounts. Though you can email me at nrmasotes@student.apc.edu.ph, please 
+	  which I feel I want to do. Ohhh... in case you are wondering about my height, I stand only at 6 feet flat. </p>
+
+	  <script>
+		function goBack() {
+		  window.history.back()
+		}
+		function goForward() {
+  window.history.forward()
+}
+	</script>
+	  
+	  <p>Currently, I am focusing in further developing &#128200 this website. If you wish to give suggestion(s), 
+	  you can contact &#128241 me through my given social media accounts. Though you can email me at nrmasotes@student.apc.edu.ph, please 
 	  be reminded that I cannot answer it on time, please consider checking my local time. 
 	  <button onclick="this.innerHTML=Date()">Click to see my local time. &#128355</button> </p>
 	  
 	  <br>
 	  <br>
+	  <input type="button" value="Back" onclick="goBack()">
 	  <button onclick="myFunction()">Click to see the surprise. &#128514</button>
+	  <input type="button" value="Forward" onclick="goForward()">
 
 	<p id="demo"></p>
 		</div>
