My Personal Website - JS DOM CSS

--- a/week5/index.html
+++ b/week5/index.html
@@ -50,9 +50,14 @@
 	  be reminded that I cannot answer it on time, please consider checking my local time. 
 	  <button onclick="this.innerHTML=Date()">Click to see my local time. &#128355</button> </p>
 	  
-	  <br>
-	  <br>
+	
+	  <p id="p2">"I Can Do All Things Through Christ Who Strengthens Me!" - Philippians 4:13</p>
 
+	  <script>
+	  document.getElementById("p2").style.color = "violet";
+	  document.getElementById("p2").style.fontFamily = "Courier New";
+	  document.getElementById("p2").style.fontSize = "larger";
+	  </script>
 	  <p id="examplemess"></p>
 	  <script>
 
@@ -83,6 +88,9 @@
 		<br>
 		<br>
 		<br>
+		<br>
+		<br>
+
 		<div class="row">
 			<div id="myportfolio">   
 			<h1>My Portfolio</h1>
